--- a/coldfront/templates/common/base.html
+++ b/coldfront/templates/common/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static tailwind_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -41,6 +41,9 @@
 
    <!-- Custom -->
   <link rel="stylesheet" href="{% static 'common/css/common.css' %}">
+  
+  <!-- Tailwind CSS -->
+  {% tailwind_css %}
 
   <title>{% block title %}Welcome to ColdFront {% endblock %}</title>
 </head>
