--- a/coldfront/templates/403.html
+++ b/coldfront/templates/403.html
@@ -8,10 +8,14 @@ ColdFront - Unauthorized
 
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-lg-6 col-xs-12">
-        <div class="alert alert-danger" role="alert">
-          <i class="fas fa-user-lock" aria-hidden="true"></i> You are not authorized to view this page. 
+<div class="flex justify-center items-center min-h-[60vh]">
+    <div class="w-full max-w-lg mx-auto px-4">
+        <div class="bg-red-50 border border-red-200 rounded-lg p-6 text-center" role="alert">
+          <div class="flex items-center justify-center w-12 h-12 mx-auto mb-4 bg-red-100 rounded-full">
+            <i class="fas fa-user-lock text-red-600 text-xl" aria-hidden="true"></i>
+          </div>
+          <h2 class="text-xl font-semibold text-red-800 mb-2">Access Denied</h2>
+          <p class="text-red-700">You are not authorized to view this page. Please contact your administrator if you believe this is an error.</p>
         </div>
     </div>
 </div>
