--- a/coldfront/templates/su/is_su.html
+++ b/coldfront/templates/su/is_su.html
@@ -1,9 +1,22 @@
 {% load i18n %}
 {% if IS_SU %}
-<div id="hijacked-warning" class="alert hijacked-warning hijacked-warning-bootstrap" role="alert">
-    {% blocktrans with user=request.user%}You are currently working on behalf of {{ user }}.{% endblocktrans %}
-    <div class="hijacked-warning-controls">
-        <a class="btn btn-default btn-sm django-hijack-button-default" href="{% url 'su_logout' %}">{% blocktrans with user=request.user %}release {{ user }}{% endblocktrans %}</a>
+<div id="hijacked-warning" class="bg-orange-50 border-l-4 border-orange-400 p-4" role="alert">
+  <div class="flex">
+    <div class="flex-shrink-0">
+      <svg class="h-5 w-5 text-orange-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+      </svg>
     </div>
+    <div class="ml-3 flex-1">
+      <p class="text-sm text-orange-700">
+        {% blocktrans with user=request.user%}You are currently working on behalf of {{ user }}.{% endblocktrans %}
+      </p>
+      <div class="mt-2">
+        <a class="inline-flex items-center rounded-md bg-orange-100 px-2.5 py-1.5 text-xs font-medium text-orange-800 hover:bg-orange-200 transition-colors duration-200" href="{% url 'su_logout' %}">
+          {% blocktrans with user=request.user %}release {{ user }}{% endblocktrans %}
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endif %}
