--- a/coldfront/plugins/iquota/templates/iquota/iquota_div.html
+++ b/coldfront/plugins/iquota/templates/iquota/iquota_div.html
@@ -1,16 +1,18 @@
-<div class="col">
-  <h3>CCR Storage Quotas</h3>
-  <hr>
+<div class="w-full">
+  <h3 class="text-xl font-semibold text-gray-900 mb-4">CCR Storage Quotas</h3>
+  <div class="border-t border-gray-200 mb-6"></div>
   <div id="iquota_inner">
-    <div id="iquota_inner_button">
-      <button id="quota-button" type="button" class="btn btn-primary center-block">Get Quota</button>
+    <div id="iquota_inner_button" class="text-center">
+      <button id="quota-button" type="button" class="inline-flex items-center px-4 py-2 bg-primary-600 text-white font-medium rounded-lg hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition-colors duration-200">
+        Get Quota
+      </button>
     </div>
   </div>
 </div>
 <script>
 $("#quota-button").click(function() {
 
-  $('#iquota_inner_button').html('<button id="quota-button" type="button" class="btn btn-primary center-block"><i class="fas fa-sync fa-spin fa-fw" aria-hidden="true"></i> Refreshing Quota <span class="sr-only">...</span></button>');
+  $('#iquota_inner_button').html('<button id="quota-button" type="button" class="inline-flex items-center px-4 py-2 bg-primary-600 text-white font-medium rounded-lg hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition-colors duration-200"><i class="fas fa-sync fa-spin fa-fw mr-2" aria-hidden="true"></i> Refreshing Quota <span class="sr-only">...</span></button>');
   $.ajax({
     url: "{% url 'get-isilon-quota' %}",
     method: "POST",
@@ -22,7 +24,7 @@ $("#quota-button").click(function() {
       $('#iquota_inner').html(data);
     },
     error: function(data) {
-      $('#iquota_inner').html('<div class="alert alert-warning"><i class="fas fa-info-circle" aria-hidden="true"></i> Error getting quota information.</div>');
+      $('#iquota_inner').html('<div class="bg-yellow-50 border border-yellow-200 rounded-lg p-4"><div class="flex"><div class="flex-shrink-0"><i class="fas fa-info-circle text-yellow-400" aria-hidden="true"></i></div><div class="ml-3"><p class="text-sm text-yellow-800">Error getting quota information.</p></div></div></div>');
     },
   });
 });
